Fix z-index issue

--- a/src/components/Navbar/Navbar.sass
+++ b/src/components/Navbar/Navbar.sass
@@ -10,6 +10,7 @@
   align-items: center
   justify-content: center
   position: fixed
+  z-index: 10
   top: 0
   left: 0
 
